--- a/srt-cloud-framework/pom.xml
+++ b/srt-cloud-framework/pom.xml
@@ -13,6 +13,7 @@
 		<module>srt-cloud-security</module>
 		<module>srt-cloud-mybatis</module>
         <module>srt-cloud-dbswitch</module>
+		<module>srt-cloud-flink</module>
     </modules>
 
 
