--- a/iotkit-parent/iot-module/iot-manager/pom.xml
+++ b/iotkit-parent/iot-module/iot-manager/pom.xml
@@ -59,9 +59,14 @@
             <artifactId>iot-temporal-service</artifactId>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>cc.iotkit</groupId>
             <artifactId>iot-data-serviceImpl-rdb</artifactId>
+        </dependency>-->
+
+        <dependency>
+            <groupId>cc.iotkit</groupId>
+            <artifactId>iot-data-serviceImpl-mybatis</artifactId>
         </dependency>
 
         <dependency>
