--- a/iotkit-parent/iot-module/iot-system/pom.xml
+++ b/iotkit-parent/iot-module/iot-system/pom.xml
@@ -43,9 +43,14 @@
             <artifactId>iot-data-model</artifactId>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>cc.iotkit</groupId>
             <artifactId>iot-data-serviceImpl-rdb</artifactId>
+        </dependency>-->
+
+        <dependency>
+            <groupId>cc.iotkit</groupId>
+            <artifactId>iot-data-serviceImpl-mybatis</artifactId>
         </dependency>
 
         <dependency>
