--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,9 @@
         <java.version>1.8</java.version>
         <spring.cloud.version>2021.0.1</spring.cloud.version>
         <spring.cloud.alibaba.version>2021.0.1.0</spring.cloud.alibaba.version>
-        <mybatisplus.version>3.5.3.1</mybatisplus.version>
+        <!--<mybatisplus.version>3.5.1</mybatisplus.version>-->
+        <!--<mybatisplus.version>3.5.3.1</mybatisplus.version>-->
+        <mybatisplus.version>3.5.5</mybatisplus.version>
         <knife4j.version>3.0.3</knife4j.version>
         <springdoc.version>1.6.8</springdoc.version>
         <captcha.version>1.6.2</captcha.version>
