--- a/iotkit-parent/iot-dao/iot-data-model/pom.xml
+++ b/iotkit-parent/iot-dao/iot-data-model/pom.xml
@@ -32,10 +32,10 @@
             <artifactId>jackson-annotations</artifactId>
         </dependency>
 
-        <!--<dependency>
+        <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-        </dependency>-->
+        </dependency>
 
     </dependencies>
 
