--- a/iotkit-parent/iot-dao/iot-temporal-serviceImpl-ts/pom.xml
+++ b/iotkit-parent/iot-dao/iot-temporal-serviceImpl-ts/pom.xml
@@ -85,7 +85,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>${postgresql.version}</version>
+            <version>42.5.4</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
