添加AI检测工程

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <module>iotkit-parent</module>
         <module>large-dataroom</module>
         <module>large-dataset</module>
+        <module>ai-monitor</module>
     </modules>
 
     <properties>
