--- a/ai-monitor/src/main/resources/bootstrap.yml
+++ b/ai-monitor/src/main/resources/bootstrap.yml
@@ -1,5 +1,6 @@
+#数据资产,数据集市共用
 server:
-  port: 8092
+  port: 8060
 
 spring:
   mvc:
@@ -28,6 +29,16 @@ spring:
     multipart:
       max-request-size: 100MB
       max-file-size: 1024MB
+# feign 配置
+feign:
+  client:
+    config:
+      default:
+        connectTimeout: 600000
+        readTimeout: 600000
+        loggerLevel: basic
+  okhttp:
+    enabled: true
 
 ai:
   file:
