添加摄像头检测

--- a/large-dataroom/pom.xml
+++ b/large-dataroom/pom.xml
@@ -13,7 +13,6 @@
 	<packaging>jar</packaging>
 
     <properties>
-        <dataset.core.version>3.0.0.2024040101.Alpha</dataset.core.version>
         <swagger.annotations.version>1.5.20</swagger.annotations.version>
         <swagger.bootstrap.version>1.9.6</swagger.bootstrap.version>
         <swagger.version>2.9.2</swagger.version>
@@ -22,7 +21,6 @@
         <jackson.version.core>2.13.3</jackson.version.core>
         <json.version>20220320</json.version>
         <minio.version>8.2.2</minio.version>
-        <dataset.core.version>3.0.0.2024040101.Alpha</dataset.core.version>
         <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
         <commons-net.version>3.6</commons-net.version>
         <commons-dbcp2.version>2.10.0</commons-dbcp2.version>
@@ -33,7 +31,7 @@
         <dependency>
             <groupId>com.gccloud</groupId>
             <artifactId>large-dataset</artifactId>
-            <version>3.0.0.2024040101.Alpha</version>
+            <version>3.0.0</version>
         </dependency>
         <!--使用log42j-->
         <dependency>
