--- a/ai-monitor/pom.xml
+++ b/ai-monitor/pom.xml
@@ -10,6 +10,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>ai-monitor</artifactId>
+    <version>2.0.0</version>
+    <packaging>jar</packaging>
 
     <properties>
         <djl.version>0.27.0</djl.version>
@@ -29,6 +31,11 @@
         <dependency>
             <groupId>net.srt</groupId>
             <artifactId>srt-cloud-security</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>net.srt</groupId>
+            <artifactId>tts</artifactId>
             <version>2.0.0</version>
         </dependency>
         <!--<dependency>
